添加排序等

--- a/app/templates/friends/index.hbs
+++ b/app/templates/friends/index.hbs
@@ -1,9 +1,9 @@
 
-<table class="primary">
+<table class="friends-table primary">
   <thead>
     <tr>
-      <th>Name</th>
-      <th></th>
+      <th {{action "setSortBy" "firstName"}}>Name</th>
+      <th {{action "setSortBy" "totalArticles"}}>articles</th>
     </tr>
   </thead>
     <tbody>
